fixed menu button on mobile

--- a/theme.css
+++ b/theme.css
@@ -2,7 +2,7 @@
 * @Author: mark
 * @Date:   2020-04-17T23:43:18-07:00
  * @Last modified by:   mark
- * @Last modified time: 2020-04-22T19:20:53-07:00
+ * @Last modified time: 2020-04-22T19:55:03-07:00
 * @Description: Theme version 2
 */
 
@@ -117,6 +117,7 @@ header {
         padding: 12px;
         position: absolute;
         right: 0.5rem;
+        top: 0.75rem;
     }
 
     .navbar-right {
